<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group_content"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_schedule"
            android:title="@string/nav_schedule" />
        <item
            android:id="@+id/nav_sessions"
            android:icon="@drawable/ic_lecture"
            android:title="@string/nav_sessions" />
        <item
            android:id="@+id/nav_speakers"
            android:icon="@drawable/ic_speaker"
            android:title="@string/nav_speakers" />
        <item
            android:id="@+id/nav_social"
            android:icon="@drawable/ic_social"
            android:title="@string/nav_social" />
    </group>

    <group android:id="@+id/group_settings">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/nav_about" />
    </group>

</menu>
