<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_event_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/event_name_full"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="48dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="48dp"
                android:gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <TextView
                android:id="@+id/text_event_motto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/text_event_name"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="48dp"
                android:gravity="center_horizontal"
                android:text="@string/event_motto"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <TextView
                android:id="@+id/text_event_website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/text_event_motto"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="@+id/text_event_motto"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="@+id/text_event_motto"
                android:layout_marginEnd="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/event_website_url"
                android:autoLink="web|email"
                android:linksClickable="true" />

            <TextView
                android:id="@+id/text_app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/text_event_website"
                android:layout_marginTop="48dp"
                app:layout_constraintStart_toStartOf="@+id/text_event_website"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="@+id/text_event_website"
                android:layout_marginEnd="8dp"
                tools:text="Version" />

            <TextView
                android:text="@string/project_powered_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_powered"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_app_version"
                app:layout_constraintEnd_toEndOf="@+id/text_app_version"
                android:layout_marginEnd="0dp"
                app:layout_constraintStart_toStartOf="@+id/text_app_version"
                android:layout_marginBottom="24dp" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>
