<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_project_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/project_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="88dp" />

            <TextView
                android:id="@+id/text_project_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/text_project_title"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:text="@string/project_desc" />

            <ImageView
                android:id="@+id/image_fork_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/fork_me"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="0dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="0dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/text_project_url"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/text_project_desc"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/project_skyboard_url"
                android:autoLink="web" />

            <TextView
                android:id="@+id/text_contributors"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/text_project_url"
                android:layout_marginTop="32dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:text="@string/contributors"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview_contributors"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@+id/text_contributors"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>